<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
    >
<EditText
    android:id="@+id/edittext_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Email"
    android:inputType="textEmailAddress"/>

   <EditText
       android:id="@+id/edittext_password"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="Password"
       android:inputType="textPassword"/>

   <Button
       android:id="@+id/button_login"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="Login"
       android:layout_marginTop="10dp"/>



   <Button
       android:id="@+id/button_call"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="Call"
       android:layout_marginTop="10dp"
       />
</LinearLayout>
